--- a/css/style.css
+++ b/css/style.css
@@ -114,8 +114,10 @@ text-decoration: none;
 }
 
 .out-nav-list{
-  padding-top: 32px;
-  padding-bottom: 32px;
+  display: flex;
+  align-items: center;
+padding-top: 32px;
+padding-bottom: 32px;
 font-weight: 500;
 line-height: 1.14;
 letter-spacing: 0.02em;
@@ -135,6 +137,12 @@ text-decoration: none;
   color:var(--accent-color);
 }
 
+.out-nav-icon {
+  margin-right: 10px;
+  fill: currentColor;
+}
+
+
 /* main conteiner index */
 .hero-title-button{
   background: var(--dark-bg-color);
@@ -142,7 +150,7 @@ background-image: linear-gradient(
   to right,
    rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
- url(../images/Img.png);
+ url(../images/Img.jpg);
 background-repeat: no-repeat;
 background-size: contain;
 background-position: center;
@@ -303,6 +311,36 @@ width: 270px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
+.social-network-list {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+
+.social-network-link:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social-network {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--icons-color);
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+
+.social-network:hover,
+.social-network:focus {
+  color: var(--native-color);
+  background-color: var(--accent-color);
+}
+
+.icon-social {
+  fill: currentColor;
+}
+
 /* main conteiner portfolio */
 .header-border {
   border: 1px solid var(--card-color);
@@ -424,37 +462,90 @@ text-decoration: none;
 .adress-list> li:not(:last-child) {
   margin-bottom: 9px;
 }
+.footer-block{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: baseline;
+}
+
+.social-footer {
+  margin-left: 70px;
+  justify-content: center;
+}
+
+.social-p {
+font-weight: 700;
+font-size: 14px;
+line-height: 1.142;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color:var(--native-color);
+margin-bottom: 20px;
+}
 
 /* Icons section*/
 .clients-list{
   margin-top: 50px;
   display: flex;
   justify-content: center;
- 
+  align-items: center;
 }
 
 .clients-list> li:not(:last-child) {
   margin-right: 30px;
 }
-.clients-company {
+.company-item {
+  display: flex;
+  justify-content: center;
   align-items: center;
   width: 170px;
   height: 92px;
-  border: 1px solid var(--icons-color);
-  box-sizing: border-box;
-  border-radius: 4px;
   color: var(--icons-color);
+  border: 1px solid var(--icons-color);
+  border-radius: 4px;
 }
 .clients-logo {
-  position: absolute;
-  align-items: center;
-  width: 106;
-  height: 60;
-  fill: var(--icons-color);
+  fill: currentColor;
 }
-  
 
- .icon{
-  fill: var(--text-color);
+.company-item:hover, .company-item:focus {
+  color: var(--accent-color);
+  border: 1px solid var(--accent-color);
+}
 
+.square-product-icon{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 270px;
+  height: 120px;
+  background: var(--bg-btn-portfolio);
+  border-radius: 4px;
+  margin-bottom: 30px;
+}
+.product-icon {
+  fill: var(--title-text-color);
+}
+.social-list {
+display: flex;
+}
+.social-list>li:not(:last-child){
+  margin-right: 10px;
+}
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--native-color);
+  background-color: rgba(255, 255, 255, 0.1);
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+}
+.social-icon {
+  fill: currentColor;
+}
+.social-link:hover, .social-link:focus {
+  background-color: var(--accent-color);
+  color: var(--native-color);
 }
