--- a/css/style.css
+++ b/css/style.css
@@ -152,11 +152,14 @@ background-image: linear-gradient(
     rgba(47, 48, 58, 0.4)),
  url(../images/Img.jpg);
 background-repeat: no-repeat;
-background-size: contain;
+background-size: cover;
 background-position: center;
 align-items: center;
 padding-top: 200px;
 padding-bottom: 200px;
+max-width: 1600px;
+height: 600px;
+margin: 0 auto;
 }
 
 .title-container {
@@ -391,7 +394,7 @@ width: 270px;
 
   }
 
-  .portfolio-card:hover{
+  .imgbox-section:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 
   }
@@ -420,6 +423,8 @@ color: var(--text-color);
 
 .imgbox-section {
   text-decoration: none;
+  display: block;
+
 }
 
 /* footer conteiner */
